welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:4: error: type mismatch;
 found   : Int
 required: Boolean
  if (a % 3)
        ^fizzBuzz:6: error: type mismatch;
 found   : Int
 required: Boolean
  if (a % 5)
        ^fizzBuzz:6: error: type mismatch;
 found   : Unit
 required: String
  if (a % 5)
  ^